--- a/css/styles.css
+++ b/css/styles.css
@@ -489,6 +489,7 @@ width: calc((100%-3*24px)/4);
 .footer-soc-box {
 	width: 208px;
 	height: 80px;
+	margin-right: 80px;
 }
 
 .soc-text {
@@ -506,4 +507,42 @@ width: calc((100%-3*24px)/4);
 	background-color: #31D0AA;
 }
 
+
+.footer-email-input {
+	width: 453px;
+	height: 80px;
+}
+
+.email {
+	font-size: 12px;
+	line-height: 200%;
+	letter-spacing: 0.04em;
+	color: #fff;
+	border: 1px solid #fff;
+	border-radius: 4px;
+	width: 264px;
+	height: 40px;
+	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+	padding: 8px 16px;
+	margin-right: 24px;
+	outline: transparent;
+	background: transparent;
+}
+
+.subscriber {
+	display: flex;
+	background: #2e2f42;;
+}
+
+.subscribe {
+fill: #fff;
+}
+
+.footer-submit {
+	padding: 8px 24px;
+	width: 165px;
+	height: 40px;
+	display: flex;
+	gap: 16px;
+}
 /* #endregion footer */
