--- a/css/styles.css
+++ b/css/styles.css
@@ -546,3 +546,201 @@ fill: #fff;
 	gap: 16px;
 }
 /* #endregion footer */
+
+/* #region modal */
+
+.backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(46, 47, 66, 0.4);
+	z-index: 999;
+	visibility: hidden;
+	opacity: 0;
+	pointer-events: none;
+	transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition-property: visibility, opacity, pointer-events;
+}
+
+.backdrop.in-open {
+	visibility: visible;
+	opacity: 1;
+	pointer-events: auto;
+}
+
+.modal {
+	width: 408px;
+	min-height: 584px;
+	border-radius: 4px;
+	padding: 72px 24px 24px 24px;
+	box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+	background: #fcfcfc;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.close-button {
+	padding: 0;
+	border: 0;
+	line-height: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 24px;
+	height: 24px;
+	border-radius: 50%;
+	background-color: #e7e9fc;
+	position: absolute;
+	top: 24px;
+	right: 24px;
+		fill: #2e2f42;
+}
+
+
+.close-button:hover, .close-button:focus {
+	background-color: #404bbf;
+}
+
+.close-button:hover, 
+.close-button:focus .close-button-icon {
+	fill: #fff;
+}
+
+.modal-text {
+	font-weight: 500;
+	text-align: center;
+	color: #2e2f42;
+	margin-bottom: 16px;
+}
+
+.modal-form-input-box {
+	margin-bottom: 8px;
+}
+
+.modal-form-label {
+	font-size: 12px;
+	line-height: 1.17;
+	letter-spacing: 0.04em;
+	color: #8e8f99;
+	display: block;
+	margin-bottom: 4px;
+}
+
+.form-input-box {
+	position: relative;
+}
+
+.form-input {
+	border: 1px solid rgba(46, 47, 66, 0.4);
+	border-radius: 4px;
+	width: 100%;
+	height: 40px;
+	padding-left: 38px;
+	outline: transparent;
+}
+
+.form-input:hover, .form-input:focus {
+	border: 1px solid #4d5ae5;
+	transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-form-icon {
+	fill: #2e2f42;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	left: 16px;
+}
+
+.form-input:hover+.modal-form-icon {
+	fill: #4d5ae5;
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-comment {
+	resize: none;
+	width: 100%;
+	font-size: 12px;
+		line-height: 1.16667;
+		letter-spacing: 0.04em;
+	border: 1px solid rgba(46, 47, 66, 0.4);
+	border-radius: 4px;
+	outline: transparent;
+	padding-top: 8px;
+	padding-left: 16px;
+}
+
+.form-comment:hover, .form-comment:focus {
+	border: 1px solid #4d5ae5;
+	transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.custom-checkbox {
+	border-radius: 2px;
+	border: 1px solid rgba(46, 47, 66, 0.4);
+	width: 16px;
+	height: 16px;
+	display: inline-flex;
+	justify-content: center;
+	align-items: center;
+	background-color: transparent;
+	margin-right: 16px;
+	background: #fcfcfc;
+	fill: transparent;
+}
+
+
+.checkbox:checked + .label-checkbox .custom-checkbox {
+	background-color: #404bbf;
+	border: transparent;
+	fill: #f4f4fd;
+}
+
+.label-checkbox {
+	font-size: 12px;
+	line-height: 1.17;
+	letter-spacing: 0.04em;
+	color: #8e8f99;
+	cursor: pointer;
+}
+
+.label-checkbox a {
+	line-height: 1.33333;
+	text-decoration: underline;
+	text-decoration-skip-ink: none;
+	color: #4d5ae5;
+}
+
+.modal-form-checkbox {
+	margin-bottom: 24px;
+}
+
+.modal-button {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	/* flex-direction: row; */
+	/* gap: 10px; */
+	cursor: pointer;
+	/* display: block; */
+	margin: 0 auto;
+	font-weight: 500;
+	font-size: 16px;
+	line-height: 1.5;
+	letter-spacing: 0.04em;
+	/* text-align: center; */
+	color: #fff;
+
+	border-radius: 4px;
+	padding: 16px 32px;
+	width: 169px;
+	height: 56px;
+	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+	background: #4d5ae5;
+}
+
+/* #endregion modal */
