--- a/css/styles.css
+++ b/css/styles.css
@@ -515,7 +515,7 @@ width: calc((100%-3*24px)/4);
 
 .email {
 	font-size: 12px;
-	line-height: 200%;
+	line-height: 2;
 	letter-spacing: 0.04em;
 	color: #fff;
 	border: 1px solid #fff;
@@ -523,15 +523,22 @@ width: calc((100%-3*24px)/4);
 	width: 264px;
 	height: 40px;
 	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-	padding: 8px 16px;
+	padding-left: 16px;
 	margin-right: 24px;
 	outline: transparent;
-	background: transparent;
+	background-color: transparent;
+}
+
+.email::placeholder {
+	color: #fff;
+	font-size: 12px;
+	letter-spacing: 0.04em;
 }
 
 .subscriber {
 	display: flex;
-	background: #2e2f42;;
+	background: #2e2f42;
+	gap: 24px;
 }
 
 .subscribe {
@@ -540,9 +547,11 @@ fill: #fff;
 
 .footer-submit {
 	padding: 8px 24px;
-	width: 165px;
+	max-width: 165px;
 	height: 40px;
 	display: flex;
+	justify-content: center;
+	align-items: center;
 	gap: 16px;
 }
 /* #endregion footer */
