--- a/css/styles.css
+++ b/css/styles.css
@@ -569,8 +569,8 @@ fill: #fff;
 	visibility: hidden;
 	opacity: 0;
 	pointer-events: none;
-	transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-	transition-property: visibility, opacity, pointer-events;
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+	transition-property: pointer-events;
 }
 
 .backdrop.in-open {
@@ -590,11 +590,14 @@ fill: #fff;
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-button {
+	position: absolute;
 	padding: 0;
-	border: 0;
+	top: 24px;
+	right: 24px;
 	line-height: 0;
 	display: flex;
 	align-items: center;
@@ -603,15 +606,19 @@ fill: #fff;
 	height: 24px;
 	border-radius: 50%;
 	background-color: #e7e9fc;
-	position: absolute;
-	top: 24px;
-	right: 24px;
-		fill: #2e2f42;
+	fill: #2e2f42;
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	cursor: pointer;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
+.close-button-icon {
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
 
 .close-button:hover, .close-button:focus {
 	background-color: #404bbf;
+	border: none;
 }
 
 .close-button:hover, 
@@ -643,13 +650,16 @@ fill: #fff;
 	position: relative;
 }
 
+
 .form-input {
 	border: 1px solid rgba(46, 47, 66, 0.4);
 	border-radius: 4px;
 	width: 100%;
 	height: 40px;
 	padding-left: 38px;
+	background-color: transparent;
 	outline: transparent;
+	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .form-input:hover, .form-input:focus {
@@ -663,24 +673,31 @@ fill: #fff;
 	top: 50%;
 	transform: translateY(-50%);
 	left: 16px;
+	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:hover+.modal-form-icon {
+.form-input:hover + .modal-form-icon {
 	fill: #4d5ae5;
 	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-user-comment {
+	margin-bottom: 16px;
 }
 
 .form-comment {
 	resize: none;
 	width: 100%;
+	height: 120px;
 	font-size: 12px;
-		line-height: 1.16667;
-		letter-spacing: 0.04em;
+	line-height: 1.17;
+	letter-spacing: 0.04em;
+	color: rgba(46, 47, 66, 0.4);
 	border: 1px solid rgba(46, 47, 66, 0.4);
 	border-radius: 4px;
 	outline: transparent;
-	padding-top: 8px;
-	padding-left: 16px;
+	padding: 8px 16px;
+	transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-comment:hover, .form-comment:focus {
@@ -700,6 +717,7 @@ fill: #fff;
 	margin-right: 16px;
 	background: #fcfcfc;
 	fill: transparent;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -717,8 +735,8 @@ fill: #fff;
 	cursor: pointer;
 }
 
-.label-checkbox a {
-	line-height: 1.33333;
+.privacy-policy {
+	line-height: 1.33;
 	text-decoration: underline;
 	text-decoration-skip-ink: none;
 	color: #4d5ae5;
@@ -729,27 +747,22 @@ fill: #fff;
 }
 
 .modal-button {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	/* flex-direction: row; */
-	/* gap: 10px; */
 	cursor: pointer;
-	/* display: block; */
+	display: block;
 	margin: 0 auto;
 	font-weight: 500;
 	font-size: 16px;
 	line-height: 1.5;
 	letter-spacing: 0.04em;
-	/* text-align: center; */
 	color: #fff;
-
+	border: none;
 	border-radius: 4px;
 	padding: 16px 32px;
 	width: 169px;
 	height: 56px;
 	box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
 	background: #4d5ae5;
+	transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* #endregion modal */
