--- a/css/styles.css
+++ b/css/styles.css
@@ -675,7 +675,8 @@ margin-left: 16px;
 	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:hover + .modal-form-icon {
+.form-input:hover +.modal-form-icon, 
+.form-input:focus + .modal-form-icon {
 	fill: #4d5ae5;
 	transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
